# git-next-tag-rust

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  sonar-project.properties  test-amd.yaml  test-arm.yaml  test.txt
.github/workflows/: main.yaml
docker/alpine/: Dockerfile  Dockerfile.old  Dockerfile.old2  Dockerfile.old3  Dockerfile.old4
docker/alpine/amd/: Dockerfile
docker/alpine/arm/: Dockerfile
docker/buildx/: Dockerfile
src/: lib.rs  main.rs
src/tests/: integration_test.rs
