[package]
name = "git-next-tag"
version = "1.2.0"
edition = "2021"
authors = ["Joost van der Griendt <dev@joostvdg.net>"]
license = "MIT"
description = "An CLI for calculating the next tag for a git repository."
readme = "README.md"
homepage = "https://github.com/joostvdg/git-next-tag-rust"
repository = "https://github.com/joostvdg/git-next-tag-rust"
keywords = ["cli", "git", "tag", "version"]
categories = ["command-line-utilities"]

[[bin]]
name = "git-next-tag"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.96"
assert_fs = "1.1.2"
clap = { version = "4.5.31", features = ["derive"] }
clap-verbosity-flag = "3.0.2"
env_logger = "0.11.6"
exitcode = "1.1.2"
log = "0.4.26"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"

# see https://joshleeb.com/posts/rust-integration-tests.html
[[test]]
name = "integration"
path = "src/tests/integration_test.rs"
